# ros_mapek_framework

./: .travis.yml  LICENSE  README.md  coverage.sh
docs/: conf.py  demo.md  demo.rst  index.rst  install.md  install.rst  reference.rst
mapek_framework/: CMakeLists.txt  package.xml  setup.py
mapek_framework/src/mapek_framework/: __init__.py  components.py  group.py  interaction.py  managed_system.py  mape_element.py  ticker.py
mapek_framework/src/test_mapek_framework/: run_tests.py  test_components.py  test_group.py  test_interaction.py  test_managed_system.py  test_mape_element.py  test_ticker.py  test_utils.py
mapek_framework_demo/: CMakeLists.txt  package.xml
mapek_framework_demo/launch/: demo.launch
mapek_framework_demo/nodes/: master.py  slave.py  ticker.py
