<?xml version="1.0"?>
<package format="2">
  <name>mapek_framework</name>
  <version>0.0.0</version>
  <description>The mapek_framework package</description>
  <maintainer email="a.cattaneo20@studenti.unibg.it">Andrea Cattaneo</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/imcatta/ros-mapek-framework</url>
  <author email="a.cattaneo20@studenti.unibg.it">Andrea Cattaneo</author>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
